# credit_scoring

./: README.md  pyproject.toml  setup.cfg
other/: calculator_expl.ipynb
src/app/antifraud/: rules.py
src/app/core/: api.py  calculator.py  model.py
src/app/modelling/: concatenate.py
src/app/modelling/feature_significance/: application_train.py  bureau.py  bureau_balance.py  credit_card_balance.py  installments_payments.py  previous_application.py
src/app/modelling/features/: application_train_test.py  bureau.py  bureau_balance.py  credit_card_balance.py  installments_payments.py  previous_application.py
src/app/modelling/models/: blending.py  boosting.py  dt.py  forest.py  logreg.py  stacking.py
src/app/utils/: db_utils.py  stats_utils.py
src/config/: db_config.py
