[tool.poetry]
name = "credit-scoring"
version = "0.1.0"
description = ""
authors = ["Anton Tsyganov <a.tsyganov1@g.nsu.ru>"]
readme = "README.md"
packages = [{include = "credit_scoring"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
wemake-python-styleguide = "^0.17.0"
isort = "^5.12.0"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scipy = "^1.10.0"
numpy = "^1.24.2"
pytest = "^7.2.2"
psycopg2 = "^2.9.5"
dvc = "^2.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
